--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+boto3==1.12.47
+botocore==1.15.47
 click==7.1.1
+docutils==0.15.2
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jmespath==0.9.5
 MarkupSafe==1.1.1
+python-dateutil==2.8.1
+s3transfer==0.3.3
+six==1.14.0
 SQLAlchemy==1.3.16
+urllib3==1.25.9
 Werkzeug==1.0.1
