--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,3 +15,8 @@ phases:
   build:
     commands:
       - echo build
+      - docker build -t FLASK_APP .
+artifacts:
+  files:
+    - 'FLASK APP'
+
