build spec file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
   build:
     commands:
       - echo build
-      - docker build -t FLASK_APP .
+      - docker build -t app .
 artifacts:
   files:
     - 'FLASK APP'
