--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       python: 3.7
     commands:
       - echo 'install'
-      - docker -version
+      - docker --version
   pre_build:
     commands:
       - echo 'pre build'
