--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,4 +21,4 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.eu-west-2.amazonaws.com/flask:latest
+      - docker push 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest
