--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,3 +23,6 @@ phases:
       - echo Pushing the Docker image...
       - docker tag flask:latest 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest
       - docker push 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest
+artifacts:
+  files:
+    - imageDetail.json
