--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,7 @@ phases:
       - echo Pushing the Docker image...
       - docker tag flask:latest 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest
       - docker push 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest
+      - printf '[{"name":"container","imageUri":"%s"}]' 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest > imagedefinitions.json
 artifacts:
   files:
     - imageDetail.json
