--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,14 +16,13 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t flask:latest .
-
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker tag flask:latest 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest
       - docker push 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest
-      - printf '[{"name":"container","imageUri":"%s"}]' 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest > imageDetail.json
+      - printf '[{"name":"flask","imageUri":"%s"}]' 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest > imagedefinitions.json
 artifacts:
   files:
-    - imageDetail.json
+    - imagedefinitions.json
