--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
       - echo Pushing the Docker image...
       - docker tag flask:latest 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest
       - docker push 985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest
-      - printf '[{"name":"flask","imageUri":"985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest"}]' > imagedefinitions.json
+      - printf '[{"name":"flask","imageUri":"985920242639.dkr.ecr.eu-west-2.amazonaws.com/flask:latest"}]' > imageDetail.json
 artifacts:
   files:
-    - imagedefinitions.json
+    - imageDetail.json
